; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/extr_j4a_base.c_J4A_FindClass__catchAll.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/extr_j4a_base.c_J4A_FindClass__catchAll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @J4A_FindClass__catchAll(%struct.TYPE_5__** %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %3, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = bitcast {}** %8 to i32* (%struct.TYPE_5__**, i8*)**
  %10 = load i32* (%struct.TYPE_5__**, i8*)*, i32* (%struct.TYPE_5__**, i8*)** %9, align 8
  %11 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i32* %10(%struct.TYPE_5__** %11, i8* %12)
  store i32* %13, i32** %5, align 8
  %14 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %3, align 8
  %15 = call i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_5__** %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %2
  %18 = load i32*, i32** %5, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %22, label %20

20:                                               ; preds = %17, %2
  %21 = call i32 (...) @J4A_FUNC_FAIL_TRACE()
  store i32* null, i32** %5, align 8
  br label %23

22:                                               ; preds = %17
  br label %23

23:                                               ; preds = %22, %20
  %24 = load i32*, i32** %5, align 8
  ret i32* %24
}

declare dso_local i64 @J4A_ExceptionCheck__catchAll(%struct.TYPE_5__**) #1

declare dso_local i32 @J4A_FUNC_FAIL_TRACE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
